# cortex

./: .gitignore  CLAUDE.md  README.md  build.py  pyproject.toml
.github/workflows/: release.yml  test.yml
benchmarks/: README.md  promptfooconfig.yaml  scores.json
benchmarks/skills/: ievo.yaml
cortex/: __init__.py  cli.py  compile.py
docs/: ARCHITECTURE.md
scripts/: version_bump.py
src/agents/: spec-writer.md  spec-writer.yaml
src/codex/: BUILD_TARGET.md
src/cortex/: benchmark.py  cli.py  compile.py  version.py
src/kernel/: brainstem.md  consciousness.md.j2  iEVO.md.j2  instincts.md  limbic.md  neocortex.md  prefrontal.md  sessions.md
templates/kernel/: consciousness.md.j2  iEVO.yaml
templates/skills/: backlog.yaml
tests/: test_benchmark.py  test_benchmark_028_integration.py  test_brain_regions.py  test_build.py  test_ci_release.py  test_ci_test.py  test_cli_benchmark.py  test_cli_compile.py  test_cli_dev.py  test_cli_validate.py  test_cortex_edge.py  test_package.py  test_qa_017_edge.py  test_req004_edge.py  test_uv_setup.py  test_validate_links.py  test_validate_links_edge.py
tests/fixtures/: golden_ievo.md
