[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = ["pyyaml", "jinja2>=3.1", "typer>=0.15.0"]

[project.scripts]
cortex = "cortex.cli:app"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pytest-cov", "watchfiles>=1.0.0"]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["cortex"]

[tool.hatch.version]
path = "cortex/version.py"

[tool.pytest.ini_options]
pythonpath = ["."]
