[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ievo-cortex"
description = "iEvo kernel — provider-agnostic agent templates, skills, and pipeline conventions"
dynamic = ["version"]
requires-python = ">=3.12"
readme = "README.md"
dependencies = ["pyyaml", "jinja2>=3.1", "typer>=0.15.0"]

[project.scripts]
cortex = "cortex.cli:app"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pytest-cov", "watchfiles>=1.0.0"]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.hatch.version]
path = "src/cortex/version.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
